--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,32 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+  background-color: #F0F0F0;
+}
+
+.container {
+  width: 1000px;
+  background-color: white;
+  margin: 0 auto;
+  height: 100vh;
+  box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
+}
+
+.title {
+  display: flex;
+  justify-content: space-between;
+}
+
+ul li {
+  list-style-type: none;
+}
+
+hr {
+  margin: 32px 0;
+}
+
+.btn {
+  width: 160px;
+}
