--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,9 +8,9 @@
 
   <p>
     <small><% if @task.completed %>
-      [x] This task is completed
+      <i class="far fa-check-square"></i> This task is completed
     <% else %>
-      [ ] This task isn't completed yet
+      <i class="far fa-square"></i> This task isn't completed yet
     <% end %></small>
   </p>
 </div>
